crates/plotnik-lib/tests/04-emit/anchors/soft_anchor_before_optional.txt
Q = (array . ";"? (identifier) @id)
==== diagnostics ====
error: after the soft anchor (`.`), no `array` places this child first; an `array` begins with `"["`
 --> query.ptk:1:6
  |
1 | Q = (array . ";"? (identifier) @id)
  |      ^^^^^
  |
help: `.` skips anonymous tokens and extras but never another named node; drop the anchor to match these children in any positions
